; ModuleID = '/home/carl/AnghaBench/libgit2/tests/iterator/extr_index.c_create_paths.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/iterator/extr_index.c_create_paths.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i64, i8* }
%struct.TYPE_11__ = type { i8*, i32, i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_12__ zeroinitializer, align 8
@.str = private unnamed_addr constant [7 x i8] c"item%d\00", align 1
@GIT_FILEMODE_BLOB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [41 x i8] c"d44e18fb93b7107b5cd1b95d601591d77869a1b6\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32)* @create_paths to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_paths(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_12__, align 8
  %8 = alloca %struct.TYPE_11__, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = bitcast %struct.TYPE_12__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %12, i8* align 8 bitcast (%struct.TYPE_12__* @GIT_BUF_INIT to i8*), i64 16, i1 false)
  %13 = load i8*, i8** %5, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load i8*, i8** %5, align 8
  %17 = call i32 @git_buf_puts(%struct.TYPE_12__* %7, i8* %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = call i32 @git_buf_putc(%struct.TYPE_12__* %7, i8 signext 47)
  %20 = call i32 @cl_git_pass(i32 %19)
  br label %21

21:                                               ; preds = %15, %3
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  store i64 %23, i64* %9, align 8
  store i32 0, i32* %10, align 4
  br label %24

24:                                               ; preds = %67, %21
  %25 = load i32, i32* %10, align 4
  %26 = icmp slt i32 %25, 8
  br i1 %26, label %27, label %70

27:                                               ; preds = %24
  %28 = load i32, i32* %6, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %34, label %30

30:                                               ; preds = %27
  %31 = load i32, i32* %10, align 4
  %32 = srem i32 %31, 2
  %33 = icmp eq i32 %32, 0
  br label %34

34:                                               ; preds = %30, %27
  %35 = phi i1 [ true, %27 ], [ %33, %30 ]
  %36 = zext i1 %35 to i32
  store i32 %36, i32* %11, align 4
  %37 = load i64, i64* %9, align 8
  %38 = call i32 @git_buf_truncate(%struct.TYPE_12__* %7, i64 %37)
  %39 = load i32, i32* %10, align 4
  %40 = call i32 @git_buf_printf(%struct.TYPE_12__* %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %39)
  %41 = call i32 @cl_git_pass(i32 %40)
  %42 = load i32, i32* %11, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %56

44:                                               ; preds = %34
  %45 = call i32 @memset(%struct.TYPE_11__* %8, i32 0, i32 16)
  %46 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 1
  %47 = load i8*, i8** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 0
  store i8* %47, i8** %48, align 8
  %49 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %50 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 2
  store i32 %49, i32* %50, align 4
  %51 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %8, i32 0, i32 1
  %52 = call i32 @git_oid_fromstr(i32* %51, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  %53 = load i32*, i32** %4, align 8
  %54 = call i32 @git_index_add(i32* %53, %struct.TYPE_11__* %8)
  %55 = call i32 @cl_git_pass(i32 %54)
  br label %66

56:                                               ; preds = %34
  %57 = load i32, i32* %6, align 4
  %58 = icmp sgt i32 %57, 0
  br i1 %58, label %59, label %65

59:                                               ; preds = %56
  %60 = load i32*, i32** %4, align 8
  %61 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 1
  %62 = load i8*, i8** %61, align 8
  %63 = load i32, i32* %6, align 4
  %64 = sub nsw i32 %63, 1
  call void @create_paths(i32* %60, i8* %62, i32 %64)
  br label %65

65:                                               ; preds = %59, %56
  br label %66

66:                                               ; preds = %65, %44
  br label %67

67:                                               ; preds = %66
  %68 = load i32, i32* %10, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %10, align 4
  br label %24

70:                                               ; preds = %24
  %71 = call i32 @git_buf_dispose(%struct.TYPE_12__* %7)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_buf_puts(%struct.TYPE_12__*, i8*) #2

declare dso_local i32 @git_buf_putc(%struct.TYPE_12__*, i8 signext) #2

declare dso_local i32 @git_buf_truncate(%struct.TYPE_12__*, i64) #2

declare dso_local i32 @git_buf_printf(%struct.TYPE_12__*, i8*, i32) #2

declare dso_local i32 @memset(%struct.TYPE_11__*, i32, i32) #2

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #2

declare dso_local i32 @git_index_add(i32*, %struct.TYPE_11__*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_12__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
